--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 300;
+  font-style: normal;
+  src: url('/fonts/NanumSquare_acL.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/fonts/NanumSquare_acR.ttf') format('ttf');
+}
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 500;
+  font-style: normal;
+  src: url('/fonts/NanumSquare_acB.ttf') format('ttf');
+}
+@font-face {
+  font-family: 'NanumSquare';
+  font-weight: 700;
+  font-style: normal;
+  src: url('/fonts/NanumSquare_acEB.ttf') format('ttf');
+}
+
+body {
+  font-family: 'NanumSquare';
+}
